--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.4.0",
+    "request": "^2.72.0",
     "restify": "^4.0.4",
     "superagent": "^1.8.3"
   }
